--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -32,6 +32,9 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+              <td><form method="POST" action="/urls/<%= id %>/delete">
+                <button type="submit" class="btn btn-warning">Delete</button>
+              </form></td>
             </tr>
           <% } %>
         </tbody>
