--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -32,9 +32,15 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
-              <td><form method="POST" action="/urls/<%= id %>/delete">
+              <td>
+                <a href="/urls/<%= id %>" class="btn btn-primary">Edit</a>
+              </td>
+              <td>
+              <form method="POST" action="/urls/<%= id %>/delete">
                 <button type="submit" class="btn btn-warning">Delete</button>
-              </form></td>
+              </form>
+              <td>
+            </td>
             </tr>
           <% } %>
         </tbody>
