--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,23 +18,27 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <form class="form-inline" action="/login" method="POST">
+    <% if (username) { %>
+    <form class="form-inline" action="/logout" method="POST">
       <div class="form-group mb-2">
-        <% if (username) { %>
-          <p style="margin-top: 5px; margin-bottom: 0px">Logged in as: <%= username %></p>
-          <button type="submit" class="btn btn-primary" style="margin-left: 10px">Logout</button>
-        <% } else { %>
-        <input
-          class="form-control"
-          type="text"
-          name="username"
-          placeholder="Username"
-          style="width: 250px; margin-right: 10px"
-        />
-        <button type="submit" class="btn btn-primary">Login</button>
-        <% } %>
+        <p style="margin-top: 5px; margin-bottom: 0px">Logged in as: <%= username %></p>
+        <button type="submit" class="btn btn-primary" style="margin-left: 10px">Logout</button>
       </div>
     </form>
+    <% } else { %>
+    <form class="form-inline" action="/login" method="POST">
+      <div class="form-group mb-2">
+        <input
+        class="form-control"
+        type="text"
+        name="username"
+        placeholder="Username"
+        style="width: 250px; margin-right: 10px"
+      />
+      <button type="submit" class="btn btn-primary">Login</button>
+      </div>
+    </form>
+    <% } %>
 
   </nav>
 </header>
