--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,7 +13,7 @@
 </head>
 <%- include('partials/_header') %>
 <body>
-    <h1>Register</h1>
+    <h2>Create an account</h2>
     <form method="POST" action="/register">
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required><br><br>
