--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -31,7 +31,7 @@
           <% for (let id in urls) { %>
             <tr>
               <td><%= id %></td>
-              <td><%= urls[id] %></td>
+              <td><%= urls[id].longURL %></td>
               <td>
                 <a href="/urls/<%= id %>" class="btn btn-primary">Edit</a>
               </td>
